# VoiceMatter

./: .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  cleanup_quality.md  config.yml  feature_request.md
design/: overlay_design.md
tests/: smoke_test.py  test_step_events.py
voicematter/: __init__.py  cli.py  daemon.py  dict.py  events.py  formatter.py  helper.py  overlay.py  recorder.py  transcriber.py  writer.py
voicematter/data/: prompt.md
