[project]
name = "voicematter"
version = "0.1.0"
description = "Press-to-record voice dictation agent that transcribes audio and uses an LLM to format the output (drops mid-stream corrections, fixes grammar, restructures into clean lists/paragraphs)."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "deepgram-sdk>=7.3.1",
    "numpy>=2.4.6",
    "pyside6>=6.7.0",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]
